force-app/main/default/objects/YG_Email_Content__mdt/YG_Email_Content__mdt.object-meta.xml
<CustomObject>
    <label>YG_Email_Content</label>
    <pluralLabel>YG_Email_Contents</pluralLabel>
</CustomObject>