force-app/main/default/objects/YG_Email_Content__mdt/fields/Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Email_Content__c</fullName>
    <label>Email Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>