force-app/main/default/objects/YG_Email_Content__mdt/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <label>Language Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>