force-app/main/default/objects/YG_Email_Content__mdt/fields/Table_Content__c.field-meta.xml
<CustomField>
    <fullName>Table_Content__c</fullName>
    <label>Table Content</label>
    <type>TextArea</type>
</CustomField>